--- a/views/formulario.hbs
+++ b/views/formulario.hbs
@@ -1,4 +1,4 @@
-
+{{!-- 
 <h2>Crear producto</h2>
 
 <div class="box">
@@ -21,4 +21,40 @@
     <br></br>
     <form action="/api/productos" method="get">
  <input type="submit" value="productos">
+    </div> --}}
+    <h2>Crear producto</h2>
+
+<div class="box">
+        <h2>Ingresar producto</h2>
+        <div class="form-group">
+            <label for="title">Titulo</label>
+            <input class="form-control" id="title" name="title" type="text" />
+        </div>
+        <div class="form-group">
+            <label for="price">precio</label>
+            <input class="form-control"  id="price" name="price" type="text" />
+        </div>
+
+            <label for="thumbnail">thumbnail</label>
+            <input class="form-control"  name="thumbnail" type="text" id="thumbnail" />
+        </div>
+        <button class="btn btn-success" id="addList">Enviar</button>
     </div>
+
+<div id="productos">
+
+</div>
+
+<div id="chat">
+    <h2>centro de mensajes</h2>
+    <input type="email" placeholder="Username" id="username">
+    <div id="chat-box">
+        <ul id="chat-messages">
+
+        </ul>
+    </div>
+    <div id="chat-form">
+        <input type="text" id="chat-input" />
+        <button id="sendMessage">Send</button>
+    </div>
+</div>
