--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <title>Document</title>
+  <script src="/socket.io/socket.io.js"></script>
+
 </head>
 <body>
     {{{body}}}
+    {{!-- <h2>Agregar producto</h2>
+    <form id="saveProduct" action="/api/productos" method="POST">
+      Nombre: <input type="text" name="nombre" /> Precio: <input type="number" name="precio" /> Foto url: <input type="url" name="url" />
+      <input type="submit" value="Agregar producto" />
+    </form>
+    <div id="products"></div>
 
+     <div class="container-fluid mt-3">
+    <h1>Chat cliente</h1>
+    <hr>
+
+    <form class="form-inline" onsubmit="return addMessage()" autocomplete="off">
+      <input type="email" id="username" placeholder="Username@mail.com">
+        <div id="messages"></div>
+        <input type="text" id="texto" placeholder="Type your message">
+        <input type="submit" value="Enviar">>
+    </form>
+  </div> --}}
+    <script src="/main.js"></script>
+ 
 </body>
 </html>
